--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -1,53 +1,25 @@
-{% load static %}
 <!doctype html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="{% static 'assets/img/favicon' %}/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="{% static 'assets/img/favicon' %}/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="{% static 'assets/img/favicon' %}/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/favicon' %}/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="{% static 'assets/img/favicon' %}/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="{% static 'assets/img/favicon' %}/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="{% static 'assets/img/favicon' %}/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="{% static 'assets/img/favicon' %}/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'assets/img/favicon' %}/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="{% static 'assets/img/favicon' %}/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'assets/img/favicon' %}/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="{% static 'assets/img/favicon' %}/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'assets/img/favicon' %}/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-
-    <link rel="manifest" href="{% static 'assets/img/favicon' %}/manifest.json">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'assets/css/blog.css' %}"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="{% static 'assets/js/main.js' %}"></script>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-
 {% include 'blog/menu.html' %}
-
-
 <main class="container">
     {% block content %}{% endblock %}
 </main>
 <br>
-<footer>
-    &copy; 2021 Sport blog"
-</footer>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+{% include 'blog/footer.html' %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+
 </body>
 </html>
