--- a/src/blog/templates/blog/home_page.html
+++ b/src/blog/templates/blog/home_page.html
@@ -1,34 +1,54 @@
 {% extends 'blog/base.html' %}
 {% load static %}
-{% block title %}Main page{% endblock%}
+{% block title %}Home page{% endblock%}
 {% block content%}
 
-<div class="index_content">
-    <div class="payload">
+<div>
+    <div>
         <h1>ГЛАВНАЯ</h1>
         <br>
-        <div class="index_text_block">
-            <em class="index_text"><b>Спорт.</b> Всего одно слово, а как много оно значит! Занятие спортом -
-                определенный вид деятельности людей,
-                направленная на достижение заданного результата в физическом развитии человека.
-                Спорт - составная часть физической культуры, при которой основной упор делается на само физическое
-                развитие
-                человека, укрепление его здоровья и самочувствия.
-                Профессиональный спорт - та его часть, в которой участвуют спортсмены, направленные именно на достижение
-                определенного результата в своей физической деятельности, на достижение победы и новых спортивных
-                рекордов.
-                Спортивные состязания, среди которых Олимпиады, Чемпионаты и Турниры выявляют лучших спортсменов.
-                Конечно,
-                мечта каждого спортсмена - победа на Олимпийских играх, самых крупных мировых состязаниях, которые
-                возникли
-                еще в Древней Греции, а впоследствии собирали участников со всего мира.
-            </em>
+        <br>
+        <br>
+        <div class="container ">
+            <div class="row">
+                <div class="col-4">
+                    <h2>Top 3 posts</h2>
+                    <p>
+                        Top 3 posts
+                    </p>
+                </div>
+
+                <div class="col-4">
+                    <h2>Top 3 authors</h2>
+                    <p>
+                        Top 3 posts
+                    </p>
+                </div>
+                <div class="col-4">
+                    <h2>Top 3 books</h2>
+                    <p>
+                        Top 3 posts
+                    </p>
+                </div>
+            </div>
         </div>
 
-    </div>
-    <div>
-        <img src="{% static 'assets/img/classic-sports.svg' %}" width="500" height="500" alt="Sport">
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <h3>
+            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+            Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
+            Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem
+            Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable
+            source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes
+            of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular
+            during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in
+            section 1.10.32.
+        </h3>
+
     </div>
 </div>
-
 {% endblock%}
