--- a/src/blog/templates/blog/menu.html
+++ b/src/blog/templates/blog/menu.html
@@ -1,43 +1,78 @@
-<aside>
-    <nav class="dws-menu">
-        <ul>
-            <li><a href="{% url 'home_page' %}"><i class="fas fa-home"></i>Главная</a></li>
-            <li><a href="#"><i class="fas fa-file-alt"></i>Посты</a>
-                <ul>
-                    <li><a href="{% url 'posts_list' %}">Все посты</a></li>
-                    <li><a href="{% url 'posts_create' %}">Создать пост</a></li>
-                    <li><a href="{% url 'posts_list_csv' %}">Выгрузка постов в CSV</a></li>
-                </ul>
-            </li>
-            <li><a href="{% url 'book_list' %}"><i class="fas fa-book"></i> Все книги</a></li>
-            <li><a href="{% url 'categories_all' %}"><i class="fas fa-list"></i> Все категории</a></li>
-            <li><a href="#"><i class="fas fa-users"></i>Люди</a>
-                <ul>
-                    <li><a href="{% url 'subscribers' %}">Все подписчики</a></li>
-                    <li><a href="{% url 'authors_new' %}">Генератор автора</a></li>
-                    <li><a href="{% url 'authors_all' %}">Все авторы</a></li>
-                    <li><a href="{% url 'subscriber_add' %}">Подписаться на Автора</a></li>
-                </ul>
-            </li>
-            <li><a href="{% url 'about' %}"><i class="fas fa-address-card"></i>О нас</a>
-                <ul>
-                    <li><a href="{% url 'contact-us-create' %}">Cвяжитесь с нами</a></li>
-                    <li><a href="{% url 'contact-us-list' %}">Обратная связь</a>
-                </ul>
-            </li>
-            <li><a href="{% url 'account:sign_up' %}"><i class="fas fa-user-plus"></i> Регистрация</a></li>
-            {% if request.user.is_authenticated %}
-            <li><a href="#"><i class="fas fa-user-edit"></i> Личный кабинет</a>
-                <ul>
-                    <li><a href="{% url 'account:view_my_profile' %}"> Помотреть профиль</a></li>
-                    <li><a href="{% url 'account:my_profile' %}"> Редактровать профиль</a></li>
-                    <li><a href="{% url 'account:my_profile_avatar_create' %}"> Добавить аватар</a></li>
-                    <li><a href="{% url 'account:my_profile_avatar_list' %}"> Список аватарок</a></li>
-                </ul>
-            </li>
-            {% endif %}
+<header class="p-3 text-bg-dark">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+                    <use xlink:href="#bootstrap"></use>
+                </svg>
+            </a>
 
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="{% url 'home_page' %}" class="nav-link px-2 text-secondary">Home Page</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-labelledby="dropdownMenuLink">
+                        Posts
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{% url 'posts_list' %}">All posts</a></li>
+                        <li><a class="dropdown-item" href="{% url 'posts_create' %}">Create post</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+<!--                        <li><a class="dropdown-item" href="#">Download CSV</a></li>-->
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        Authors/Subscribers
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{% url 'subscribers' %}">Все подписчики</a></li>
+                        <li><a class="dropdown-item" href="{% url 'authors_all' %}">Все авторы</a></li>
+                        <li><a class="dropdown-item" href="{% url 'subscriber_add' %}">Подписаться на Автора</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        About US
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{% url 'about' %}">About US</a></li>
+                        <li><a class="dropdown-item" href="{% url 'contact-us-create' %}">Conntect to US</a></li>
+                        <li><a class="dropdown-item" href="{% url 'contact-us-list' %}">Feedback</a></li>
+                    </ul>
+                </li>
+                <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        Personal cabinet
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{% url 'account:sign_up' %}">Регистрация</a></li>
+                        {% if request.user.is_authenticated %}
+                        <li><a class="dropdown-item" href="{% url 'account:view_my_profile' %}"> Помотреть профиль</a>
+                        </li>
+                        <li><a class="dropdown-item" href="{% url 'account:my_profile' %}"> Редактровать профиль</a>
+                        </li>
+                        <li><a class="dropdown-item" href="{% url 'account:my_profile_avatar_create' %}"> Добавить
+                            аватар</a></li>
+                        <li><a class="dropdown-item" href="{% url 'account:my_profile_avatar_list' %}"> Список
+                            аватарок</a></li>
+                        {% endif %}
+                    </ul>
+                </li>
+            </ul>
 
-        </ul>
-    </nav>
-</aside>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+</header>
