--- a/src/account/templates/account/user_sign_up.html
+++ b/src/account/templates/account/user_sign_up.html
@@ -1,5 +1,4 @@
 {% extends 'account/base.html' %}
-{% load crispy_forms_tags %}
 {% block title %}
 {{ title }}
 {% endblock %}
@@ -8,7 +7,7 @@
 
 <form method="POST">
     {% csrf_token %}
-    {{ form | crispy }}
+    {{ form }}
     <br>
     <button class="btn btn-lg btn-success">Зарегистрироваться</button>
 </form>
