--- a/src/blog/templates/blog/contactus_form.html
+++ b/src/blog/templates/blog/contactus_form.html
@@ -1,18 +1,14 @@
 {% extends 'blog/base.html' %}
-{% load crispy_forms_tags %}
 {% block title %}
 {{ title }}
 {% endblock %}
-
 {% block content%}
 <div class="text-center">
     <form action="{% url 'contact-us-create' %}" method="POST">
     {% csrf_token %}
-    {{ form | crispy}}
+    {{ form }}
         <br>
     <button class="btn btn-lg btn-success">Сохранить</button>
 </form>
 </div>
-
-
 {% endblock%}
