--- a/src/blog/templates/blog/menu.html
+++ b/src/blog/templates/blog/menu.html
@@ -6,7 +6,6 @@
                     <use xlink:href="#bootstrap"></use>
                 </svg>
             </a>
-
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="{% url 'home_page' %}" class="nav-link px-2 text-secondary">Home Page</a></li>
                 <li class="nav-item dropdown">
@@ -45,7 +44,7 @@
                         <li><a class="dropdown-item" href="{% url 'contact-us-list' %}">Feedback</a></li>
                     </ul>
                 </li>
-                <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                <li><a href="{% url 'book_list' %}" class="nav-link px-2 text-white">Books</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">About</a></li>
                 <li class="nav-item dropdown">
@@ -68,7 +67,6 @@
                     </ul>
                 </li>
             </ul>
-
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
