--- a/src/blog/templates/blog/subscribers.html
+++ b/src/blog/templates/blog/subscribers.html
@@ -1,20 +1,16 @@
 {% extends 'blog/base.html' %}
-
 {% block title %}
 {{ title }}
 {% endblock %}
 {% block content%}
-
-
 <div class="content">
-
     <h1>Все подписчики</h1>
-
     <div class="payload">
         <table class="table table-hover">
             <thead>
             <tr>
                 <th scope="col">ID подписчика</th>
+                <th scope="col">Name подписчика</th>
                 <th scope="col">Email подписчика</th>
                 <th scope="col">Автор</th>
             </tr>
@@ -23,6 +19,7 @@
             {% for SUB in subs %}
             <tr>
                 <td scope="row">{{ SUB.id }}</td>
+                <td>{{ SUB.name }}</td>
                 <td>[{{ SUB.email_to }}]</td>
                 <td>{{ SUB.author_id }}</td>
             </tr>
@@ -31,5 +28,4 @@
         </table>
     </div>
 </div>
-
 {% endblock%}
