--- a/src/blog/templates/blog/home_page.html
+++ b/src/blog/templates/blog/home_page.html
@@ -11,21 +11,21 @@
         <div class="container ">
             <div class="row">
                 <div class="col-4">
-                    <h2>Top 3 posts</h2>
+                    <h2>Top 3 articles</h2>
                     <p>
-                        Top 3 posts
+                        Top 3 articles
                     </p>
                 </div>
                 <div class="col-4">
                     <h2>Top 3 authors</h2>
                     <p>
-                        Top 3 posts
+                        Top 3 authors
                     </p>
                 </div>
                 <div class="col-4">
                     <h2>Top 3 books</h2>
                     <p>
-                        Top 3 posts
+                        Top 3 books
                     </p>
                 </div>
             </div>
