--- a/src/blog/templates/blog/menu.html
+++ b/src/blog/templates/blog/menu.html
@@ -11,11 +11,11 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-labelledby="dropdownMenuLink">
-                        Posts
+                        Articles
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'posts_list' %}">All posts</a></li>
-                        <li><a class="dropdown-item" href="{% url 'posts_create' %}">Create post</a></li>
+                        <li><a class="dropdown-item" href="{% url 'article_list' %}">All articles</a></li>
+                        <li><a class="dropdown-item" href="{% url 'article_create' %}">Create article</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
