--- a/src/blog/templates/blog/subscribers.html
+++ b/src/blog/templates/blog/subscribers.html
@@ -9,7 +9,7 @@
         <table class="table table-hover">
             <thead>
             <tr>
-                <th scope="col">ID подписчика</th>
+<!--                <th scope="col">ID подписчика</th>-->
                 <th scope="col">Name подписчика</th>
                 <th scope="col">Email подписчика</th>
                 <th scope="col">Автор</th>
@@ -18,7 +18,7 @@
             <tbody>
             {% for subscriber in subscribers %}
             <tr>
-                <td>{{ subscriber.id }}</td>
+<!--                <td>{{ subscriber.id }}</td>-->
                 <td>{{ subscriber.name }}</td>
                 <td>[{{ subscriber.email_to }}]</td>
                 <td>{{ subscriber.author_id }}</td>
