--- a/src/blog/templates/blog/book_list.html
+++ b/src/blog/templates/blog/book_list.html
@@ -7,6 +7,7 @@
     <h2>Колличество книг: {{ cnt }}</h2>
     <h1>Книги</h1>
     <form method="GET">
+        {{ filter.form }}
         <br>
         <button type="submit" class="btn btn-primary">
             <span class="glyphicon glyphicon-search">Поиск</span>
