--- a/src/blog/templates/blog/subscribe_add.html
+++ b/src/blog/templates/blog/subscribe_add.html
@@ -6,15 +6,13 @@
 <div class="content">
     <h1>Подписаться на Автора</h1>
     <div class="payload">
-        <div class="err">
-            {{ form.errors }}
-        </div>
+<!--        <div class="err">-->
+<!--            {{ form.errors }}-->
+<!--        </div>-->
         <form method="POST">
             {% csrf_token %}
             {{ form.name }}
-            <br>
             {{ form.email_to }}
-            <br>
             {{ form.author_id }}
             <br>
             <button class="btn btn-lg btn-danger">Подписаться</button>
