--- a/src/account/templates/account/base_old.html
+++ b/src/account/templates/account/base_old.html
@@ -1,31 +1,26 @@
-<!doctype html>
 {% load static %}
-<html lang="en" data-bs-theme="auto">
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %}</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'assets/css/blog.css' %}"/>
-    <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-
-
-
+    <title>{% block title %}{% endblock %}</title>
 </head>
-<header>
-    {% include 'blog/menu.html' %}
-</header>
 <body>
+
+{% include 'blog/menu.html' %}
+
+
 <main class="container">
     {% block content %}{% endblock %}
 </main>
-<footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-    {% include 'blog/footer.html' %}
-</footer>
+<br>
+{% include 'blog/footer.html' %}
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
