--- a/src/account/templates/account/login.html
+++ b/src/account/templates/account/login.html
@@ -11,23 +11,16 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-
-
-
 </head>
-<header>
-    {% include 'blog/menu.html' %}
-</header>
 <body>
-<main class="container">
-    {% block content %}{% endblock %}
-</main>
-<footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-    {% include 'blog/footer.html' %}
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+<div class="form_login">
+    <h2>Log IN</h2>
+    <form method="post" action="{% url 'account:login' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="btn btn-primary" type="submit">Login</button>
+        <span><a href="{% url 'account:sign_up' %}">Create acccount</a></span>
+    </form>
+</div>
 </body>
 </html>
