--- a/src/blog/templates/blog/article_create.html
+++ b/src/blog/templates/blog/article_create.html
@@ -14,6 +14,7 @@
             {{ form.description }}
             {{ form.content|add_class:'search_form' }}
             <button class="btn btn-lg btn-success">Сохранить</button>
+            <button type="reset" class="btn btn-lg btn-danger">Clean</button>
         </form>
     </div>
 </div>
