--- a/src/blog/templates/blog/article_show.html
+++ b/src/blog/templates/blog/article_show.html
@@ -14,12 +14,12 @@
         </div>
         <br>
         <div class="update link">
-            <a href="{% url 'article_update' slug=article.slug %}" class="btn btn-info">Редактировать</a>
+            <a href="{% url 'blog:article_update' slug=article.slug %}" class="btn btn-info">Редактировать</a>
         </div>
         <br>
         <div class="update link">
             {% if request.user.is_authenticated %}
-            <a href="{% url 'article_delete' article.slug %}" class="btn btn-danger">Удалить статью</a>
+            <a href="{% url 'blog:article_delete' article.slug %}" class="btn btn-danger">Удалить статью</a>
             {% endif %}
         </div>
     </div>
