--- a/src/blog/templates/blog/articles_list.html
+++ b/src/blog/templates/blog/articles_list.html
@@ -4,6 +4,9 @@
 {% endblock %}
 {% block content%}
 <div class="content">
+    {% if request.user.is_authenticated %}
+    <a href="{% url 'blog:article_create' %}">Create article</a>
+    {% endif %}
     <h2>Колличество articles: {{ cnt }}</h2>
     <h1>Articles</h1>
     <hr>
@@ -18,7 +21,7 @@
     <div class="post">
         <br>
         <h4>
-            {{ forloop.counter }}) <a href="{% url 'article_show' slug=article.slug %}">{{ article.title }}</a>
+            {{ forloop.counter }}) <a href="{% url 'blog:article_show' slug=article.slug %}">{{ article.title }}</a>
         </h4>
         <p>{{ article.content }}</p>
     </div>
