--- a/src/blog/templates/blog/authors.html
+++ b/src/blog/templates/blog/authors.html
@@ -27,7 +27,7 @@
                 <td>[{{ author.email }}]</td>
                 <td>{{ author.books.count }}</td>
                 {% if request.user.is_authenticated %}
-                <td><a href="{% url 'author_delete' author.slug %}" class="btn btn-danger">Удалить автора</a></td>
+                <td><a href="{% url 'blog:author_delete' author.slug %}" class="btn btn-danger">Удалить автора</a></td>
                 {% endif %}
             </tr>
             {% endfor %}
