--- a/src/blog/templates/blog/footer.html
+++ b/src/blog/templates/blog/footer.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
             <div class="col-md-5 offset-md-1 mb-3">
-                <form>
+                <form id="form_email_news">
                     <h5>Subscribe to our newsletter</h5>
                     <p>Monthly digest of what's new and exciting from us.</p>
                     <div class="d-flex flex-column flex-sm-row w-100 gap-2">
