--- a/src/blog/templates/blog/menu.html
+++ b/src/blog/templates/blog/menu.html
@@ -1,76 +1,46 @@
-<header class="p-3 text-bg-dark">
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                    <use xlink:href="#bootstrap"></use>
-                </svg>
-            </a>
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="{% url 'home_page' %}" class="nav-link px-2 text-secondary">Home Page</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-labelledby="dropdownMenuLink">
-                        Articles
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'article_list' %}">All articles</a></li>
-                        <li><a class="dropdown-item" href="{% url 'article_create' %}">Create article</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-<!--                        <li><a class="dropdown-item" href="#">Download CSV</a></li>-->
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        Authors/Subscribers
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'subscribers' %}">Все подписчики</a></li>
-                        <li><a class="dropdown-item" href="{% url 'authors_all' %}">Все авторы</a></li>
-                        <li><a class="dropdown-item" href="{% url 'subscriber_add' %}">Подписаться на Автора</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        About US
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'about' %}">About US</a></li>
-                        <li><a class="dropdown-item" href="{% url 'contact-us-create' %}">Conntect to US</a></li>
-                        <li><a class="dropdown-item" href="{% url 'contact-us-list' %}">Feedback</a></li>
-                    </ul>
-                </li>
-                <li><a href="{% url 'book_list' %}" class="nav-link px-2 text-white">Books</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">About</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        Personal cabinet
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'account:sign_up' %}">Регистрация</a></li>
-                        {% if request.user.is_authenticated %}
-                        <li><a class="dropdown-item" href="{% url 'account:view_my_profile' %}"> Помотреть профиль</a>
-                        </li>
-                        <li><a class="dropdown-item" href="{% url 'account:my_profile' %}"> Редактровать профиль</a>
-                        </li>
-                        <li><a class="dropdown-item" href="{% url 'account:my_profile_avatar_create' %}"> Добавить
-                            аватар</a></li>
-                        <li><a class="dropdown-item" href="{% url 'account:my_profile_avatar_list' %}"> Список
-                            аватарок</a></li>
-                        {% endif %}
-                    </ul>
-                </li>
-            </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+<div class="container">
+    <header class="border-bottom lh-1 py-3">
+        <div class="row flex-nowrap justify-content-between align-items-center">
+            <div class="col-4 pt-1">
+                <a class="link-secondary" href="#form_email_news">Subscribe</a>
+            </div>
+            <div class="col-4 text-center">
+                <a class="blog-header-logo text-body-emphasis text-decoration-none" href="{% url 'blog:home_page' %}">Home
+                    Page</a>
+            </div>
+            <div class="col-4 d-flex justify-content-end align-items-center">
+                <a class="link-secondary" href="#" aria-label="Search">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+                         stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img"
+                         viewBox="0 0 24 24"><title>Search</title>
+                        <circle cx="10.5" cy="10.5" r="7.5"/>
+                        <path d="M21 21l-5.2-5.2"/>
+                    </svg>
+                </a>
+                <a class="btn btn-sm btn-outline-secondary" href="{% url 'account:login' %}">Sign in</a>
+            </div>
         </div>
+    </header>
+
+    <div class="nav-scroller py-1 mb-3 border-bottom">
+        <nav class="nav nav-underline justify-content-between">
+            <a class="nav-item nav-link link-body-emphasis active" href="{% url 'blog:article_list' %}">Articles</a>
+            <a class="nav-item nav-link link-body-emphasis " href="{% url 'blog:authors_all' %}">Authors</a>
+
+            <div class="dropdown nav-item nav-link link-body-emphasis">
+                <p class="dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">
+                    Authors/Subscribers
+                </p>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" href="{% url 'blog:subscribers' %}">All subscribers</a></li>
+                    <li><a class="dropdown-item" href="{% url 'blog:authors_all' %}">All authors</a></li>
+                    <li><a class="dropdown-item" href="{% url 'blog:subscriber_add' %}">Subscribe for author</a></li>
+                </ul>
+            </div>
+            <a class="nav-item nav-link link-body-emphasis " href="{% url 'blog:about' %}">About US</a>
+            <a class="nav-item nav-link link-body-emphasis" href="{% url 'blog:contact_us' %}">Contact US</a>
+            <a class="nav-item nav-link link-body-emphasis" href="{% url 'blog:book_list' %}">Books</a>
+        </nav>
     </div>
-</header>
+</div>
