--- a/src/blog/templates/blog/menu.html
+++ b/src/blog/templates/blog/menu.html
@@ -5,8 +5,8 @@
                 <a class="link-secondary" href="#form_email_news">Subscribe</a>
             </div>
             <div class="col-4 text-center">
-                <a class="blog-header-logo text-body-emphasis text-decoration-none" href="{% url 'blog:home_page' %}">Home
-                    Page</a>
+                <a class="blog-header-logo text-body-emphasis text-decoration-none" href="{% url 'blog:home_page' %}">Blog
+                    World</a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="link-secondary" href="#" aria-label="Search">
@@ -22,25 +22,13 @@
         </div>
     </header>
 
-    <div class="nav-scroller py-1 mb-3 border-bottom">
-        <nav class="nav nav-underline justify-content-between">
-            <a class="nav-item nav-link link-body-emphasis active" href="{% url 'blog:article_list' %}">Articles</a>
-            <a class="nav-item nav-link link-body-emphasis " href="{% url 'blog:authors_all' %}">Authors</a>
-
-            <div class="dropdown nav-item nav-link link-body-emphasis">
-                <p class="dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true"
-                   aria-expanded="false">
-                    Authors/Subscribers
-                </p>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <li><a class="dropdown-item" href="{% url 'blog:subscribers' %}">All subscribers</a></li>
-                    <li><a class="dropdown-item" href="{% url 'blog:authors_all' %}">All authors</a></li>
-                    <li><a class="dropdown-item" href="{% url 'blog:subscriber_add' %}">Subscribe for author</a></li>
-                </ul>
-            </div>
-            <a class="nav-item nav-link link-body-emphasis " href="{% url 'blog:about' %}">About US</a>
+    <div class="nav-scroller mb-3 border-bottom">
+        <nav class="nav nav-underline justify-content-center">
+            <a class="nav-item nav-link link-body-emphasis" href="{% url 'blog:article_list' %}">Articles</a>
+            <a class="nav-item nav-link link-body-emphasis" href="{% url 'blog:authors_all' %}">Authors</a>
+<!--            <a class="nav-item nav-link link-body-emphasis" href="{% url 'blog:book_list' %}">Books</a>-->
+            <a class="nav-item nav-link link-body-emphasis" href="{% url 'blog:about_us' %}">About US</a>
             <a class="nav-item nav-link link-body-emphasis" href="{% url 'blog:contact_us' %}">Contact US</a>
-            <a class="nav-item nav-link link-body-emphasis" href="{% url 'blog:book_list' %}">Books</a>
         </nav>
     </div>
 </div>
