modified form for Article, added field for model Category, created a template to display articles by category, created view for display articles by category

--- a/src/blog/templates/blog/article_create.html
+++ b/src/blog/templates/blog/article_create.html
@@ -13,6 +13,11 @@
             {{ form.title }}
             {{ form.description }}
             {{ form.content|add_class:'search_form' }}
+            <br>
+            {{ form.author }}
+            <br>
+            {{ form.category }}
+            <br>
             <button class="btn btn-lg btn-success">Сохранить</button>
             <button type="reset" class="btn btn-lg btn-danger">Clean</button>
         </form>
