--- a/src/blog/templates/blog/article_update.html
+++ b/src/blog/templates/blog/article_update.html
@@ -13,6 +13,10 @@
             {{ form.description }}
             {{ form.content }}
             <br>
+            {{ form.author }}
+            <br>
+            {{ form.category }}
+            <br>
             <button class="btn btn-lg btn-success">Сохранить</button>
         </form>
     </div>
