--- a/src/blog/static/assets/css/blog.css
+++ b/src/blog/static/assets/css/blog.css
@@ -120,6 +120,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 /*-----Log in------*/
 
-.carousel-item {
+/*-----Article Show------*/
+.author_category {
     display: flex;
+    justify-content: space-between;
 }
+/*-----Article Show------*/
