--- a/src/blog/templates/blog/article_show.html
+++ b/src/blog/templates/blog/article_show.html
@@ -42,7 +42,7 @@
 <!--        </div>-->
 
         <div class="update link">
-            <a href="{% url 'blog:add_comment' slug=article.slug %}" class="btn btn-success">Додати коментар</a>
+            <a href="{% url 'blog:add_comment' slug=article.slug %}" class="btn a_btn btn-success">Додати коментар</a>
         </div>
         <br>
     </div>
