--- a/src/account/templates/account/sign-up.html
+++ b/src/account/templates/account/sign-up.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% if account_created %}
+    <meta http-equiv="refresh" content="2 ;url={% url 'account:login' %}">
+    {% endif %}
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -12,15 +15,91 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
+<header class="border-bottom lh-1 py-3">
+    <div class="row flex-nowrap justify-content-center">
+        <div class="col-4 text-center">
+            <a class="blog-header-logo text-body-emphasis text-decoration-none" href="{% url 'blog:home_page' %}">Blog
+                World</a>
+        </div>
+    </div>
+</header>
 <body>
-<div class="form_login">
-    <h2>Sign Up</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-primary" type="submit">Sign Up</button>
-        <button class="btn btn-danger" type="reset">Clean</button>
-    </form>
+<div class="container">
+    <br>
+    {% if messages %}
+    <center>
+        <div>
+            {% for message in messages %}
+            <p style="color: green; font-weight: bold">{{ message }}</p>
+            {% endfor %}
+        </div>
+        {% endif %}
+    </center>
+    <center>
+        {% if form.errors %}
+        <div>
+            <div>
+                {% for field, errors in form.errors.items %}
+                {% for error in errors %}
+                <p class="error_list">{{ error }}</p>
+                {% endfor %}
+                {% endfor %}
+            </div>
+        </div>
+        {% endif %}
+    </center>
+    <div class="container_form">
+        <div class="form_body">
+            <h2>Sign Up</h2>
+            <form method="post">
+                {% csrf_token %}
+                <div class="form_body_item">
+                    {{ form.username}}
+                    {{ form.email }}
+                    {{ form.password1 }}
+                    {{ form.password2 }}
+                    <center><span><input type="checkbox" onclick="showPassword()"> Show password</span></center>
+                    <button class="btn form_body_item_btn btn-sm btn-outline-secondary" type="submit">Sign Up</button>
+                    <button class="btn  form_body_item_btn btn-sm btn-outline-secondary" type="reset">Clean</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <footer class="py-5">
+        <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+            <p>© 2023</p>
+            <ul class="list-unstyled d-flex">
+                <li class="ms-3"><a class="link-body-emphasis" href="#">
+                    <svg class="bi" width="24" height="24">
+                        <use xlink:href="#twitter"></use>
+                    </svg>
+                </a></li>
+                <li class="ms-3"><a class="link-body-emphasis" href="#">
+                    <svg class="bi" width="24" height="24">
+                        <use xlink:href="#instagram"></use>
+                    </svg>
+                </a></li>
+                <li class="ms-3"><a class="link-body-emphasis" href="#">
+                    <svg class="bi" width="24" height="24">
+                        <use xlink:href="#facebook"></use>
+                    </svg>
+                </a></li>
+            </ul>
+        </div>
+    </footer>
 </div>
+<script>
+    function showPassword() {
+    var passwordField1 = document.getElementById("id_password1");
+    var passwordField2 = document.getElementById("id_password2");
+    if (passwordField1.type === "password" && passwordField2.type === "password") {
+        passwordField1.type = "text";
+        passwordField2.type = "text";
+    } else {
+        passwordField1.type = "password";
+        passwordField2.type = "password";
+    }
+}
+</script>
 </body>
 </html>
