--- a/src/blog/templates/blog/article/articles_list.html
+++ b/src/blog/templates/blog/article/articles_list.html
@@ -4,26 +4,46 @@
 {% endblock %}
 {% block content%}
 <div class="content">
-    {% if request.user.is_authenticated %}
-    <a href="{% url 'blog:article_create' %}">Create article</a>
-    {% endif %}
-    <h2>Колличество articles: {{ cnt }}</h2>
-    <h1>Articles</h1>
+    <center><h1>Articles: {{ cnt }}</h1></center>
+    <center>
+        <a class="icon-link gap-1 icon-link-hover" href="{% url 'blog:article_create' %}">
+            Create article
+            <svg class="bi">-->
+                <use xlink:href="#chevron-right"/>
+            </svg>
+        </a>
+    </center>
     <hr>
-    <form method="GET">
-        {{ filter.form }}
-        <br>
-        <button type="submit" class="btn btn-primary">
-            <span>Поиск</span>
-        </button>
-    </form>
+    <div class=>
+        <center>
+            <form method="GET" class="form-inline">
+                {{ filter.form.title }}
+                {{ filter.form.description }}
+                {{ filter.form.content }}
+                <button type="submit" class="form_body_item_btn btn  a_btn btn-outline-secondary">Search
+                </button>
+            </form>
+        </center>
+    </div>
+    <hr>
     {% for article in article_list %}
-    <div class="post">
-        <br>
-        <h4>
-            {{ forloop.counter }}) <a href="{% url 'blog:article_show' slug=article.slug %}">{{ article.title }}</a>
-        </h4>
-        <p>{{ article.content }}</p>
+    <div>
+        <div>
+            <h4>
+                <center>{{ article.title }}</center>
+            </h4>
+            {% if article.content|length > 200 %}
+            {{ article.content|slice:":200" }}...
+            <a href="{% url 'blog:article_show' article.slug %}"
+               class="icon-link gap-1 icon-link-hover">Continue reading
+                <svg class="bi">-->
+                    <use xlink:href="#chevron-right"/>
+                </svg>
+            </a>
+            {% else %}
+            {{ article.content }}
+            {% endif %}
+        </div>
     </div>
     <hr>
     {% endfor %}
