--- a/src/blog/templates/blog/components/menu.html
+++ b/src/blog/templates/blog/components/menu.html
@@ -2,7 +2,7 @@
     <header class="border-bottom lh-1 py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-4 pt-1">
-                <a class="link-secondary" href="#form_email_news">Subscribe</a>
+                <a class="btn btn-sm a_btn btn-outline-secondary" href="#form_email_news">Subscribe</a>
             </div>
             <div class="col-4 text-center">
                 <a class="blog-header-logo text-body-emphasis text-decoration-none" href="{% url 'blog:home_page' %}">Blog
