--- a/src/blog/templates/blog/home_page.html
+++ b/src/blog/templates/blog/home_page.html
@@ -144,76 +144,13 @@
                 </tbody>
                 {% endfor %}
             </table>
-            <p>Якийсь текст</p>
         </article>
-        <span class="pb-4 mb-4 fst-italic border-bottom"></span>
+<!--        <span class="pb-4 mb-4 fst-italic border-bottom"></span>-->
         <article class="blog-post">
-            <h2 class="display-5 link-body-emphasis mb-1">Написати про те як користуватися сайтом, та його правила</h2>
-            <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
 
-            <p>Якийсь текст</p>
-            <hr>
-            <p>Якийсь текст</p>
-            <h2>Якийсь текст</h2>
-            <p>Якийсь текст</p>
-            <blockquote class="blockquote">
-                <p>Якийсь текст</p>
-            </blockquote>
-            <p>Якийсь текст</p>
-            <h3>Якийсь текст</h3>
-            <p>Якийсь текст</p>
-            <ul>
-                <li>Якийсь текст</li>
-                <li>Якийсь текст</li>
-                <li>Якийсь текст</li>
-            </ul>
-            <p>Якийсь текст</p>
-            <ol>
-                <li>Якийсь текст</li>
-                <li>Якийсь текст</li>
-                <li>Якийсь текст</li>
-            </ol>
-            <p>Якийсь текст</p>
-            <dl>
-                <dt>Якийсь текст</dt>
-                <dd>Якийсь текст</dd>
-                <dt>Якийсь текст</dt>
-                <dd>Якийсь текст</dd>
-                <dt>Якийсь текст</dt>
-                <dd>Якийсь текст</dd>
-            </dl>
-            <h2>Якийсь текст</h2>
-            <p>Якийсь текст</a>.
-            </p>
-            <ul>
-                <li><strong>To bold text</strong>, use <code
-                        class="language-plaintext highlighter-rouge">&lt;strong&gt;</code>.
-                </li>
-                <li><em>To italicize text</em>, use <code
-                        class="language-plaintext highlighter-rouge">&lt;em&gt;</code>.
-                </li>
-                <li>Abbreviations, like <abbr title="HyperText Markup Language">HTML</abbr> should use <code
-                        class="language-plaintext highlighter-rouge">&lt;abbr&gt;</code>, with an optional <code
-                        class="language-plaintext highlighter-rouge">title</code> attribute for the full phrase.
-                </li>
-                <li>Citations, like <cite>— Mark Otto</cite>, should use <code
-                        class="language-plaintext highlighter-rouge">&lt;cite&gt;</code>.
-                </li>
-                <li>
-                    <del>Deleted</del>
-                    text should use <code class="language-plaintext highlighter-rouge">&lt;del&gt;</code> and
-                    <ins>inserted</ins>
-                    text should use <code class="language-plaintext highlighter-rouge">&lt;ins&gt;</code>.
-                </li>
-                <li>Superscript <sup>text</sup> uses <code
-                        class="language-plaintext highlighter-rouge">&lt;sup&gt;</code> and subscript
-                    <sub>text</sub> uses <code class="language-plaintext highlighter-rouge">&lt;sub&gt;</code>.
-                </li>
-            </ul>
         </article>
-        <span class="pb-4 mb-4 fst-italic border-bottom"></span>
+<!--        <span class="pb-4 mb-4 fst-italic border-bottom"></span>-->
         <article class="blog-post">
-            <h2 class="display-5 link-body-emphasis mb-1">Може ще Якийсь текст</h2>
         </article>
     </div>
 </main>
