--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -104,7 +104,7 @@
         <div class="col-md-4">
             <div class="position-sticky" style="top: 2rem;">
                 <div class="p-4">
-                    <h4 class="fst-italic">Categories(Категорії)</h4>
+                    <h4 class="fst-italic">Categories</h4>
                     <ol class="list-unstyled mb-0">
                         {% for category in categories%}
                         <li><a href="{% url 'blog:article_list_category' slug=category.slug %}">{{ category.name }}</a>
@@ -113,7 +113,7 @@
                     </ol>
                 </div>
                 <div>
-                    <h4 class="fst-italic">Recent posts (Останні публікації)</h4>
+                    <h4 class="fst-italic">Recent Articles</h4>
                     <ul class="list-unstyled">
                         <li>
                             {% for article in articles %}
