changed style button in article_show.html

--- a/src/blog/templates/blog/article/article_show.html
+++ b/src/blog/templates/blog/article/article_show.html
@@ -52,7 +52,9 @@
         <!--        </div>-->
 
         <div class="update link">
-            <a href="{% url 'blog:add_comment' slug=article.slug %}" class="btn a_btn btn-success">Додати коментар</a>
+            <a href="{% url 'blog:add_comment' slug=article.slug %}" class="form_body_item_btn btn  a_btn btn-outline-secondary">
+                Add comment
+            </a>
         </div>
         <br>
     </div>
