--- a/src/blog/static/assets/css/blog.css
+++ b/src/blog/static/assets/css/blog.css
@@ -122,6 +122,11 @@ h1, h2, h3, h4, h5, h6 {
 .blog_navbar {
     background-color: red;
 }
+
+.banner {
+    display: flex;
+    justify-content: space-between;
+}
 /*-----Home page------*/
 
 
