--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -32,7 +32,7 @@
     </symbol>
 </svg>
 <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
-    <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center"
+    <button class="form_body_item_btn btn  a_btn btn-outline-secondary dropdown-toggle d-flex align-items-center"
             id="bd-theme"
             type="button"
             aria-expanded="false"
@@ -107,7 +107,7 @@
                     <h4 class="fst-italic">Categories</h4>
                     <ol class="list-unstyled mb-0">
                         {% for category in categories%}
-                        <li><a href="{% url 'blog:article_list_category' slug=category.slug %}">{{ category.name }}</a>
+                        <li><a href="{% url 'blog:article_list_category' slug=category.slug %}"> - {{ category.name }}</a>
                         </li>
                         {% endfor %}
                     </ol>
@@ -119,11 +119,12 @@
                             {% for article in articles %}
                             <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top"
                                href="{% url 'blog:article_show' article.slug %}">
-                                <svg class="bd-placeholder-img" width="100%" height="96"
-                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                                     preserveAspectRatio="xMidYMid slice" focusable="false">
-                                    <rect width="100%" height="100%" fill="#777"/>
-                                </svg>
+<!--                                <svg class="bd-placeholder-img" width="100%" height="96"-->
+<!--                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true"-->
+<!--                                     preserveAspectRatio="xMidYMid slice" focusable="false">-->
+<!--                                    <rect width="100%" height="100%" fill="#777"/>-->
+<!--                                </svg>-->
+                                <img src="{% static 'assets/img/article-svgrepo-com.svg' %}" alt="">
                                 <div class="col-lg-8">
                                     <h6 class="mb-0">{{ article.title }}</h6>
                                     <small class="text-body-secondary">{{ article.created }}</small>
