--- a/src/blog/templates/blog/home_page.html
+++ b/src/blog/templates/blog/home_page.html
@@ -17,91 +17,42 @@
         <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
     </symbol>
 </svg>
-<div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
-    <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center"
-            id="bd-theme"
-            type="button"
-            aria-expanded="false"
-            data-bs-toggle="dropdown"
-            aria-label="Toggle theme (auto)">
-        <svg class="bi my-1 theme-icon-active" width="1em" height="1em">
-            <use href="#circle-half"></use>
-        </svg>
-        <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
-    </button>
-    <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
-        <li>
-            <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light"
-                    aria-pressed="false">
-                <svg class="bi me-2 opacity-50 theme-icon" width="1em" height="1em">
-                    <use href="#sun-fill"></use>
-                </svg>
-                Light
-                <svg class="bi ms-auto d-none" width="1em" height="1em">
-                    <use href="#check2"></use>
-                </svg>
-            </button>
-        </li>
-        <li>
-            <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark"
-                    aria-pressed="false">
-                <svg class="bi me-2 opacity-50 theme-icon" width="1em" height="1em">
-                    <use href="#moon-stars-fill"></use>
-                </svg>
-                Dark
-                <svg class="bi ms-auto d-none" width="1em" height="1em">
-                    <use href="#check2"></use>
-                </svg>
-            </button>
-        </li>
-        <li>
-            <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto"
-                    aria-pressed="true">
-                <svg class="bi me-2 opacity-50 theme-icon" width="1em" height="1em">
-                    <use href="#circle-half"></use>
-                </svg>
-                Auto
-                <svg class="bi ms-auto d-none" width="1em" height="1em">
-                    <use href="#check2"></use>
-                </svg>
-            </button>
-        </li>
-    </ul>
-</div>
-<svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-    <symbol id="aperture" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-            stroke-width="2" viewBox="0 0 24 24">
-        <circle cx="12" cy="12" r="10"/>
-        <path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/>
-    </symbol>
-    <symbol id="cart" viewBox="0 0 16 16">
-        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-    </symbol>
-    <symbol id="chevron-right" viewBox="0 0 16 16">
-        <path fill-rule="evenodd"
-              d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-    </symbol>
-</svg>
 <main class="container">
-    <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
-        <div class="col-lg-6 px-0">
-            <h1 class="display-6 fst-italic">Світ БЛОГУ чекає на тебе</h1>
-            <p class="lead my-3">На нашому блозі ділимося цікавими ідеями, трендами та практиками. У розділі «Статті»
-                ви обов'язково знайдете щось корисне!</p>
+    <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary banner">
+        <div class="col-lg-6 px-0 ">
+            <div>
+                <h1 class="display-6 fst-italic">The world of BLOG is waiting
+                    for you</h1>
+                <p class="lead my-3">We share interesting ideas, trends and
+                    practices on our blog. In the "Articles" section
+                    you will definitely find something useful!</p>
+            </div>
+        </div>
+        <div>
+<!--            <img src="{% static 'assets/img/write-svgrepo-com.svg' %}"-->
+<!--                 alt="her">-->
+            <img src="{% static 'assets/img/writer-svgrepo-com.svg' %}"
+                 alt="her">
         </div>
     </div>
     <div class="row mb-2 g-5">
         <span class="pb-4 mb-4 fst-italic border-bottom"></span>
-        <h2 class="display-5 link-body-emphasis mb-1">Top 3 articles in this site</h2>
+        <h2 class="display-5 link-body-emphasis mb-1">Top 3 articles in this
+            site</h2>
         <!--може тут буде слайдер з 3 найпопулярнішими статтями. Відбір буде здійснюватися кількістю лайків.-->
         {% for article in articles %}
         <div class="col-md-12">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                    <strong class="d-inline-block mb-2 text-primary-emphasis">{{ article.title }}</strong>
+                    <strong class="d-inline-block mb-2 text-primary-emphasis">
+                        {{ article.title }}</strong>
                     <h3 class="mb-0">{{ article.description }}</h3>
-                    <div class="mb-1 text-body-secondary">{{ article.created}}</div>
-                    <p class="card-text mb-auto clamp">{{ article.content }}</p>
+                    <div class="mb-1 text-body-secondary">
+                        {{ article.created}}
+                    </div>
+                    <p class="card-text mb-auto clamp">
+                        {{ article.content }}
+                    </p>
                     <a href="{% url 'blog:article_show' article.slug %}"
                        class="icon-link gap-1 icon-link-hover stretched-link">
                         Continue reading
@@ -110,14 +61,14 @@
                         </svg>
                     </a>
                 </div>
-                <div class="col-auto d-none d-lg-block">
-                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
-                         role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-                         focusable="false"><title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#55595c"/>
-                        <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                    </svg>
-                </div>
+                <!--                <div class="col-auto d-none d-lg-block">-->
+                <!--                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"-->
+                <!--                         role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"-->
+                <!--                         focusable="false"><title>Placeholder</title>-->
+                <!--                        <rect width="100%" height="100%" fill="#55595c"/>-->
+                <!--                        <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>-->
+                <!--                    </svg>-->
+                <!--                </div>-->
             </div>
         </div>
         {% endfor %}
@@ -125,7 +76,8 @@
     <div class="row g-5">
         <span class="pb-4 mb-4 fst-italic border-bottom"></span>
         <article class="blog-post">
-            <h2 class="display-5 link-body-emphasis mb-1">Top 3 authors in this site</h2>
+            <h2 class="display-5 link-body-emphasis mb-1">Top 3 authors in this
+                site</h2>
             <table class="table">
                 <thead>
                 <tr>
@@ -145,11 +97,11 @@
                 {% endfor %}
             </table>
         </article>
-<!--        <span class="pb-4 mb-4 fst-italic border-bottom"></span>-->
+        <!--        <span class="pb-4 mb-4 fst-italic border-bottom"></span>-->
         <article class="blog-post">
 
         </article>
-<!--        <span class="pb-4 mb-4 fst-italic border-bottom"></span>-->
+        <!--        <span class="pb-4 mb-4 fst-italic border-bottom"></span>-->
         <article class="blog-post">
         </article>
     </div>
